pink and indigo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Вкусные и простые кексы</title>
+  <link href='style.css' rel='stylesheet'>
 </head>
 <body>
   <h1>Вкусные и простые кексы</h1>
