Added floating boxes, margins, padding and a font

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <head>
   <title>Вкусные и простые кексы</title>
   <link href='style.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Вкусные и простые кексы</h1>
+  <figure class="illustration">
     <img src="cupcake.jpg" alt="A plate of cupcakes">
-    <h2>Ингредиенты</h2>
+    <figcaption class='bon-appetit'>Приятного аппетита!</figcaption>
+  </figure>    
+    <section class="recipe-box">
+      <h2>Ингредиенты</h2>
     <ul>
       <li>изюм или курага по вкусу.</li>
       <li>пачка масла. (растопленное но не горячее)</li>
@@ -17,9 +24,10 @@
       <li>ч.л. ванильного сахара.</li>
       <li>200 гр муки.</li>
       <li>1/2 ч.л. пищевой соды.</li>
-     
     </ul>
-    <h2>Последовательность готовки</h2>
+    </section>
+    <section class="recipe-box">
+      <h2>Последовательность готовки</h2>
     <ol>
       <li>Разогреть духовку на 200 градусов.</li>
       <li>Размешать яйца.</li>
@@ -38,8 +46,10 @@
       <li>Разделить по двенадцати формам. </li>
       <li>Заложить в духовку на 30 минут.</li>
     </ol>
-    <p><span>Приятного аппетита!</span></p>
+    </section>
+    <footer>
     <p><a href="https://youtu.be/6YiQ0d_4n7Q" target="_blank">Оригинальное видео</a></p>
+    </footer>
 
 
 </body>
