--- a/recipes.html
+++ b/recipes.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Вкусные и простые кексы</title>
-  <link href='style.css' rel='stylesheet'>
+  <link href='recipes.css' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
