--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="definition">
         <h1>ОРИГАМИ!</h1>
         <h2>Что такое оригами?</h2>
-             <p>Оригами, это японтское исскуство складывания бумаг.
+             <p>Оригами, это японское исскуство складывания бумаг.
                 Обычно оригами делают без клея и ножницей, но иногда может такое случиться что Вам понадобяться они.</p> 
     </div>
     <div id="links"> 
