--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>ОРИГАМИ!</h1>
         <h2>Что такое оригами?</h2>
              <p>Оригами, это японское исскуство складывания бумаг.
-                Обычно оригами делают без клея и ножницей, но иногда может такое случиться что Вам понадобяться они.</p> 
+                Обычно оригами делают без клея и ножницей, но иногда может такое случиться что Вам понадобятся они.</p> 
     </div>
     <div id="links"> 
         <div class="link" id="heart"> 
