added questions to serdechki

--- a/serdechki.html
+++ b/serdechki.html
@@ -6,6 +6,22 @@
     <title>Сердечки</title>
 </head>
 <body>
+<div class="video">
     <video src="videos/hearts-video-compressed.mp4" controls></video>
+</div>
+<div class="quiz">
+    <h2>Головоломка</h2>
+    <p>Размер сердца взрослого человека почти идентичен с размером...?</p>
+    <form action="">
+        <input type="radio" name="question" id="answer-a" class="incorrect">
+        <label for="answer-a">распухшей ноги</label>
+        <input type="radio" name="question" id="answer-b" class="incorrect">
+        <label for="answer-b">большой головы</label>
+        <input type="radio" name="question" id="answer-c" class="correct">
+        <label for="answer-с">сжатого кулака</label>
+        <input type="radio" name="question" id="answer-d" class="incorrect">
+        <label for="answer-d">закрытого глаза</label>
+    </form>
+</div>
 </body>
 </html>
