--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Оригами класс!
     </title>
 </head>
-<body>
+<body background="./images/sky.jpg" class="background">
     <div id="definition">
         <h1>ОРИГАМИ!</h1>
         <h2>Что такое оригами?</h2>
