Got quiz logic working

--- a/serdechki.html
+++ b/serdechki.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="serdechki.css">
+    <script src="./scripts/quiz.js" defer></script>
     <title>Сердечки</title>
 </head>
 <body background="./images/sky.jpg" class="background">
@@ -27,7 +28,7 @@
         </div>
         <div>
         <input type="radio" name="question" id="answer-c" class="correct">
-        <label for="answer-с">сжатого кулака</label>
+        <label for="answer-c">сжатого кулака</label>
         </div>
         <div>
         <input type="radio" name="question" id="answer-d" class="incorrect">
