added owl and crane pictures and videos, added links in header and footer and to quiz sections for real this time

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         <div class="link" id="heart"> 
             <a href="serdechki.html"><img src="images/hearts-image.jpg" alt="бумажные сердечки"></a>
         </div>
-        <div class="link" id="bookmark"> </div>
-        <div class="link" id="crane"> </div>
-        <div class="link" id="plane">   </div>
-        <div class="link" id="box"> </div>
+        <div class="link" id="owl">
+            <a href="sova.html"><img src="images/owl-image.jpg" alt="бумажная сова"></a>
+        </div>
+        <div class="link" id="crane">
+            <a href="zhuravl.html"><img src="images/crane-image.jpg" alt="бумажный журавль"></a> 
+        </div>
+    
 
 
     </div>
