--- a/zhuravl.html
+++ b/zhuravl.html
@@ -8,20 +8,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="origami.css">
     <script src="./scripts/quiz.js" defer></script>
-    <title>Сердечки</title>
+    <title>сова</title>
 </head>
-<header>
-    <ul>
-        <li><a href="index.html">На главную страницу</a></li>
-        <li><a href="sova.html">Сова</a></li>
-        <li><a href="zhuravl.html">Журавль</a></li>
-    </ul>
-</header>
 <body background="./images/sky.jpg" class="background">
-    <h1>Сердечки</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">На главную страницу</a></li>
+            <li><a href="serdechki.html">Сердечки</a></li>
+            <li><a href="sova.html">Сова</a></li>
+        </ul>
+    </header>
+    <h1>Журавль</h1>
     <h2><a href="#quiz-heading">(Головоломка внизу!)</a></h2>
 <div class="video">
-    <video src="videos/hearts-video-compressed.mp4" controls></video>
+    <video src="videos/crane-video-compressed.mp4" controls></video>
 </div>
 <div class="quiz">
     <h2 id="quiz-heading">Головоломка</h2>
@@ -48,9 +48,9 @@
 <footer>
     <ul>
         <li><a href="index.html">На главную страницу</a></li>
+        <li><a href="serdechki.html">Сердечки</a></li>
         <li><a href="sova.html">Сова</a></li>
-        <li><a href="zhuravl.html">Журавль</a></li>
-    </ul>
+    </ul>    
 </footer>
 </body>
 </html>
