Added quiz questions for owl and crane

--- a/zhuravl.html
+++ b/zhuravl.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="origami.css">
     <script src="./scripts/quiz.js" defer></script>
-    <title>сова</title>
+    <title>Журавль</title>
 </head>
 <body background="./images/sky.jpg" class="background">
     <header>
@@ -25,23 +25,23 @@
 </div>
 <div class="quiz">
     <h2 id="quiz-heading">Головоломка</h2>
-    <p>Размер сердца взрослого человека почти идентичен с размером...?</p>
+    <p>Где родина журавлей?</p>
     <form action="">
         <div>
         <input type="radio" name="question" id="answer-a" class="incorrect">
-        <label for="answer-a">распухшей ноги</label>
+        <label for="answer-a">южный казахстан</label>
         </div>
         <div>
-        <input type="radio" name="question" id="answer-b" class="incorrect">
-        <label for="answer-b">большой головы</label>
+        <input type="radio" name="question" id="answer-b" class="correct">
+        <label for="answer-b">северная америка</label>
         </div>
         <div>
-        <input type="radio" name="question" id="answer-c" class="correct">
-        <label for="answer-c">сжатого кулака</label>
+        <input type="radio" name="question" id="answer-c" class="incorrect">
+        <label for="answer-c">западный авганистан</label>
         </div>
         <div>
         <input type="radio" name="question" id="answer-d" class="incorrect">
-        <label for="answer-d">закрытого глаза</label>
+        <label for="answer-d">северный китай</label>
         </div>
     </form>
 </div>
